@@ -1,4 +1,4 @@
-<html>
+w<html>
 <head>
 <title>PROJ.4 - General Parameters</title>
 </head>
@@ -19,6 +19,47 @@ Virtually all coordinate systems allow for the presence of a false easting
 (+x_0) and northing (+y_0).  Note that these values are always expressed in
 meters even if the coordinate system is some other units.  Some coordinate
 systems (such as UTM) have implicit false easting and northing values.<p>
+
+<h2><a name="pm">pm - Prime Meridian</a></h2>
+
+A prime meridian may be declared indicating the offset between the prime
+meridian of the declared coordinate system and that of greenwich.  A prime
+meridian is clared using the "pm" parameter, and may be assigned a symbolic
+name, or the longitude of the alternative prime meridian relative to 
+greenwich. <p>
+
+Currently prime meridian declarations are only utilized by the 
+pj_transform() API call, not the pj_inv() and pj_fwd() calls.  Consequently
+the user utility <b>cs2cs</b> does honour prime meridians but the <b>proj</b>
+user utility ignores them. <p>
+
+The following predeclared prime meridian names are supported.  These
+can be listed using the cs2cs argument <b>-lm</b>.<p>
+<pre>
+   greenwich 0dE                           
+      lisbon 9d07'54.862"W                 
+       paris 2d20'14.025"E                 
+      bogota 74d04'51.3"E                  
+      madrid 3d41'16.48"W                  
+        rome 12d27'8.4"E                   
+        bern 7d26'22.5"E                   
+     jakarta 106d48'27.79"E                
+       ferro 17d40'W                       
+    brussels 4d22'4.71"E                   
+   stockholm 18d3'29.8"E                   
+      athens 23d42'58.815"E                
+        oslo 10d43'22.5"E                  
+</pre>
+
+Example of use.  The location long=0, lat=0 in the greenwich based
+lat/long coordinates is translated to lat/long coordinates with Madrid
+as the prime meridian. <p>
+
+<pre>
+ cs2cs +proj=latlong +datum=WGS84 +to +proj=latlong +datum=WGS84 +pm=madrid
+0 0                           <i>(input)</i>
+3d41'16.48"E    0dN 0.000     <i>(output)</i>
+</pre>
 
 <h2><a name="towgs84">towgs84 - Datum transformation to WGS84</a></h2>
 
